<resources>
    <string name="app_name">GameDeal</string>
    <string name="slogan">无忧游戏生活!</string>
    <string name="advertisement">广告</string>
    <string name="pass">跳过5</string>
    <string name="page_me_text_goto_login">登录/注册</string>
    <string name="frag_seach">请输入搜索内容</string>
    <string name="frag_search_cancel">取消</string>
    <string name="next_step">下一步</string>
    <string name="frag_search_history">历史搜索：</string>
    <string name="frag_buy">求购</string>
    <string name="frag_sell">出售</string>
    <string name="frag_tencent">腾讯游戏</string>
    <string name="frag_tencent_slogan">用钱创造快乐！</string>
    <string name="frag_netease">网易游戏</string>
    <string name="frag_netease_slogan">游戏热爱者！</string>
    <string name="frag_shendagames">盛大游戏</string>
    <string name="frag_shendagames_slogan">一起开心，一起游戏！</string>
    <string name="frag_perfectworld">完美世界</string>
    <string name="frag_perfectworld_slogan">完美游戏，世界同享！</string>
    <string name="frag_cyou">搜狐畅游</string>
    <string name="frag_cyou_slogan">永远追求卓越！</string>
    <string name="frag_tiancity">世纪天成</string>
    <string name="frag_tiancity_slogan">游戏世纪乐享天成！</string>
    <string name="frag_seasun">西山居</string>
    <string name="frag_seasun_slogan">创造快乐，传递快乐！</string>
    <string name="frag_giant">巨人游戏</string>
    <string name="frag_giant_slogan">做最好玩的游戏！</string>
    <string name="entity">请输入实体</string>
    <string name="main_bar_home">首页</string>
    <string name="main_bar_news">发现</string>
    <string name="main_bar_buycar">购物车</string>
    <string name="main_bar_me">我的</string>
    <string name="choosethings">选择物品照片</string>
    <string name="gamename">游戏名：</string>
    <string name="companyname">运营公司：</string>
    <string name="gameid">游戏帐号：</string>
    <string name="gameid_hint">请输入游戏帐号</string>
    <string name="gameservice">游戏分区：</string>
    <string name="submit">提交</string>
    <string name="notes_listitem_gamename">地下城与勇士</string>
    <string name="notes_listitem_gameservice">广东一区</string>
    <string name="notes_listitem_tingsname">破旧的武士剑+50</string>
    <string name="notes_listitem_thingsvalue">5000RMB</string>
    <string name="frag_sort">综合-</string>
    <string name="things_number">1</string>
    <string name="RMB">￥</string>
    <string name="good_activity_game_repertory">库存</string>
    <string name="good_activity_game_area">游戏大区</string>
    <string name="good_activity_game_name">游戏名字</string>
    <string name="good_activity_price">单价</string>
    <string name="notes_title">上新</string>
    <string name="gamemoney">充值游戏币</string>
    <string name="choosegame">请选择游戏</string>
    <string name="choosegameservice">请选择游戏区服</string>
    <string name="finish">完成</string>
    <string name="entity_picture_text">实物照：</string>
    <string name="failurelink_internet">服务器响应超时</string>
    <string name="failureLink_response">数据出错</string>
    <string name="loading">正在努力加载…</string>
    <string name="failurelink_linkagain">重新连接</string>
    <string name="charts_check">点击率</string>
</resources>
