<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:orientation="vertical"
    android:padding="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@android:color/white">

            <Spinner
                android:id="@+id/frag_search_spinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:entries="@array/frag_search_array">


            </Spinner>

            <EditText
                android:id="@+id/frag_search_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:background="@null"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:hint="@string/frag_seach"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:maxLength="10"
                android:maxLines="1"
                android:padding="0dp"
                android:textSize="15dp">

                <requestFocus />
            </EditText>

        </LinearLayout>


        <Button
            android:id="@+id/frag_search_cancel"
            style="@style/textSellOrBuy"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:text="@string/frag_search_cancel" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/frag_search_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frag_search_history"
                android:textSize="12dp" />

            <ImageView
                android:id="@+id/frag_search_history_delete"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="10dp"
                android:src="@android:drawable/ic_menu_delete" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/frag_search_history_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/frag_search_history"
            android:clickable="true"
            android:orientation="horizontal">

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>