<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp">

        <ImageView
            android:id="@+id/things_sell_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:background="@drawable/action_bar_back" />

        <Button
            android:id="@+id/things_sell_submit"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:padding="0dp"
            android:text="@string/submit"
            android:textSize="14sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="2dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingTop="2dp">

        <ImageButton
            android:id="@+id/things_sell_minus"
            android:layout_width="29dp"
            android:layout_height="29dp"
            android:background="@drawable/minus_48" />

        <EditText
            android:id="@+id/things_sell_number"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:background="@null"
            android:digits="0123456789"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="15"
            android:maxLines="1"
            android:text="@string/things_number"
            android:textSize="15sp" />

        <ImageButton
            android:id="@+id/things_sell_plus"
            android:layout_width="29dp"
            android:layout_height="29dp"
            android:background="@drawable/plus_48" />


    </LinearLayout>

    <fragment
        android:id="@+id/things_sell_name"
        class="com.example.z.thelastrow_client_gamedeal.fragment.inputmodule.InputThingsFragment"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        tools:layout="@layout/fragment_things_input">

    </fragment>

    <fragment
        android:id="@+id/things_sell_value"
        class="com.example.z.thelastrow_client_gamedeal.fragment.inputmodule.InputThingsFragment"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        tools:layout="@layout/fragment_things_input">

    </fragment>

    <LinearLayout
        android:id="@+id/things_sell_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/things_sell_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/entity_picture_text"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp" />

        <GridView
            android:id="@+id/things_sell_gridview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnWidth="150dp"
            android:horizontalSpacing="10dp"
            android:numColumns="3"
            android:stretchMode="columnWidth"
            android:verticalSpacing="5dp">

        </GridView>

    </LinearLayout>

</LinearLayout>
