<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <fragment
        android:id="@+id/good_frag_action_bar"
        class="com.example.z.thelastrow_client_gamedeal.fragment.widget.ActionBarFragment"
        android:layout_width="match_parent"
        android:layout_height="@dimen/frag_action_bar_height"
        tools:layout="@layout/fragment_action_bar" />
    <ScrollView
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/frag_action_bar_height"
        android:layout_below="@+id/good_frag_action_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/good_text_title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/good_activity_item_height"
                android:gravity="center_vertical"
                android:text="标题"
                android:textSize="@dimen/good_activity_text_size" />
            <ImageView
                android:id="@+id/good_img"
                android:layout_below="@id/good_text_title"
                android:layout_width="@dimen/good_activity_img_height"
                android:layout_height="@dimen/good_activity_img_height" />
            <LinearLayout
                android:id="@+id/good_line1"
                android:layout_below="@id/good_img"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/good_activity_item_height">
                    <TextView
                        android:gravity="center_vertical"
                        android:textSize="@dimen/good_activity_text_size"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/good_activity_price"/>
                    <TextView
                        android:id="@+id/good_text_game_price"
                        android:gravity="center_vertical|right"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/good_activity_text_size"
                        android:textColor="@color/good_activity_game_info_color"
                        android:text="￥30"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/good_activity_item_height">
                    <TextView
                        android:gravity="center_vertical"
                        android:textSize="@dimen/good_activity_text_size"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/good_activity_game_name"/>
                    <TextView
                        android:id="@+id/good_text_game_name"
                        android:gravity="center_vertical|right"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/good_activity_text_size"
                        android:textColor="@color/good_activity_game_info_color"
                        android:text="QQ飞车"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/good_activity_item_height">
                    <TextView
                        android:gravity="center_vertical"
                        android:textSize="@dimen/good_activity_text_size"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/good_activity_game_area"/>
                    <TextView
                        android:id="@+id/good_text_game_area"
                        android:gravity="center_vertical|right"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/good_activity_text_size"
                        android:textColor="@color/good_activity_game_info_color"
                        android:text="电信一区"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/good_activity_item_height">
                    <TextView
                        android:gravity="center_vertical"
                        android:textSize="@dimen/good_activity_text_size"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/good_activity_game_repertory"/>
                    <TextView
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:id="@+id/good_text_game_repertory"
                        android:gravity="end"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/good_activity_text_size"
                        android:textColor="@color/good_activity_game_info_color"
                        android:text="1"/>
                    <TextView
                        android:gravity="end"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/good_activity_text_size"

                        android:text="件"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/good_line2"
                android:layout_below="@id/good_line1"
                android:layout_width="match_parent"
                android:layout_height="40dp">
                <Button
                    android:id="@+id/good_btn_like"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="收藏(0)"/>
                <Button
                    android:id="@+id/good_btn_see_comment"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="查看评价(0)"/>
            </LinearLayout>
            <ListView
                android:layout_below="@id/good_line2"
                android:id="@+id/good_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </ListView>
        </RelativeLayout>
    </ScrollView>
    <LinearLayout

        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <TextView
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="￥:"/>
        <TextView
            android:id="@+id/good_text_game_price_bottom"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="30"/>
        <fragment
            android:id="@+id/good_frag_number"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"

            android:layout_width="100dp"
            android:layout_height="match_parent"
            tools:layout="@layout/fragment_good_number"
            class="com.example.z.thelastrow_client_gamedeal.fragment.widget.GoodNumberFragment"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:text="购买"
            android:textColor="@android:color/white"
            android:textSize="@dimen/list_view_item_textSize" />
    </LinearLayout>

</RelativeLayout>